update for 2022, junit 5, gradle wrapper 7, remove maven support