@@ -1,21 +1,20 @@
 package ee.itcollage.level11;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
-public class WordFilterTest {
+class WordFilterTest {
 
     //todo 1 make tests pass
 
     private String sentence = "The quick brown fox jumps over the lazy dog and laughs";
     //todo you can read more about our sentence here: https://en.wikipedia.org/wiki/The_quick_brown_fox_jumps_over_the_lazy_dog
-    private List<Word> words = Arrays.asList(
+    private List<Word> words = List.of(
             new Word("the", Word.WordType.OTHER),
             new Word("quick", Word.WordType.ADJECTIVE),
             new Word("brown", Word.WordType.ADJECTIVE),
@@ -32,19 +31,19 @@ public class WordFilterTest {
     private WordFilter filter = new WordFilter();
 
     @Test
-    public void getNouns() {
+    void getNouns() {
         List<Word> nouns = filter.getNouns(words);
         assertEquals(2, nouns.size());
     }
 
     @Test
-    public void getFirstVerb() {
+    void getFirstVerb() {
         Word firstVerb = filter.getFirstVerb(words);
         validateWord("jumps", Word.WordType.VERB, firstVerb);
     }
 
     @Test
-    public void getFirstOfType() {
+    void getFirstOfType() {
         Word adjective = filter.getFirstOfType(words, Word.WordType.ADJECTIVE);
         validateWord("quick", Word.WordType.ADJECTIVE, adjective);
         Word noun = filter.getFirstOfType(words, Word.WordType.NOUN);
@@ -56,25 +55,25 @@ public class WordFilterTest {
     }
 
     @Test
-    public void getAllNotNouns() {
+    void getAllNotNouns() {
         List<Word> notNouns = filter.getAllNotNouns(words);
         List<String> words = notNouns.stream().map(Word::getWord).collect(Collectors.toList());
         assertFalse(words.contains("dog"));
     }
 
     @Test
-    public void getNounStrings() {
+    void getNounStrings() {
         List<String> nounStrings = filter.getNounStrings(words);
-        assertEquals(Arrays.asList("fox", "dog"), nounStrings);
+        assertEquals(List.of("fox", "dog"), nounStrings);
     }
 
     @Test
-    public void getFirstVerbString() {
+    void getFirstVerbString() {
         assertEquals("jumps", filter.getFirstVerbString(words));
     }
 
     @Test
-    public void getFirstStringOfType() {
+    void getFirstStringOfType() {
         String adjective = filter.getFirstStringOfType(words, Word.WordType.ADJECTIVE);
         assertEquals("quick", adjective);
         String noun = filter.getFirstStringOfType(words, Word.WordType.NOUN);
