@@ -1,19 +1,19 @@
 package ee.itcollage.level5;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class PositiveTest {
+class PositiveTest {
 
     @Test
-    public void positiveTest() {
+    void positiveTest() {
         assertEquals(new ArrayList<>(), Positives.analyze(new ArrayList<>()));
-        assertEquals(Arrays.asList(1, 2, 3), Positives.analyze(Arrays.asList(1, 2, 3)));
-        assertEquals(Arrays.asList(1), Positives.analyze(Arrays.asList(-1, 0, 1)));
-        assertEquals(new ArrayList<>(), Positives.analyze(Arrays.asList(-1, -2, -3)));
+        assertEquals(List.of(1, 2, 3), Positives.analyze(List.of(1, 2, 3)));
+        assertEquals(List.of(1), Positives.analyze(List.of(-1, 0, 1)));
+        assertEquals(new ArrayList<>(), Positives.analyze(List.of(-1, -2, -3)));
     }
 }
